@@ -1,3 +1,12 @@
+2003-10-29  Maciej Stachowiak  <mjs@apple.com>
+
+        Merged fix for the following bug from HEAD:
+
+	- fixed 3183754 - returning false from key press handlers does not prevent typing or form submission
+        
+        * kwq/KWQKHTMLPart.mm:
+        (KWQKHTMLPart::keyEvent):
+
 === WebCore-106 ===
 
 2003-09-19  Maciej Stachowiak  <mjs@apple.com>
